[package]
name = "phragql"
version = "0.1.0"
edition = "2021"

[lib]
name="libphragql"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
graphql-parser = "0.4.0"
serde = {version="1", features=["derive"]}
serde_json = "1.0.79"
sqlx = {version="0.5.11", features=["postgres", "runtime-tokio-rustls", "json"]}
tokio = {version="1.17.0", features=["full"]}
